--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Typescript World!</h1>
-    <script src="./dist/script.js"></script>
+    <script type="module" src="./dist/script.js"></script>
 </body>
 </html>
